Fix invisible terminal text in action page stdout (#2460)

--- a/app/terminal/terminal.css
+++ b/app/terminal/terminal.css
@@ -134,6 +134,9 @@
   overflow-x: scroll !important;
 }
 
+.terminal .terminal-line {
+  color: white;
+}
 .terminal.light-terminal .terminal-line {
   color: #222;
 }
